sonarlint refactor/polishing